# moderation-service

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: celery_app.py  config.py  main.py  models.py  schemas.py  tasks.py
backend/app/api/: router.py  schemas.py
backend/app/auth/: router.py
backend/app/database/: check.py  core.py  seed.py
classifier/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
classifier/app/: config.py  main.py
classifier/app/api/: router.py  schemas.py  service.py
classifier/app/data/: dataset.py
classifier/app/infer/: __main__.py  infer.py
classifier/app/models/: bert.py  loss.py  module.py
classifier/app/predict/: predictor.py
classifier/app/train/: __main__.py  train.py
classifier/data/: label_encoder.json
frontend/src/: App.tsx
frontend/src/pages/: contact.tsx
nginx/: 50x.html  Dockerfile  index.html  nginx.conf
nginx/static/css/: style.css
