[project]
name = "backend"
version = "0.1.0"
description = "Backend on FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.13.2",
    "bcrypt==4.0.1",
    "fastapi==0.111.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg==3.1.9",
    "pydantic-settings==2.3.4",
    "pydantic[email]==2.8.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-slugify==8.0.4",
    "sqlalchemy[asyncio]==2.0.31",
    "uvicorn[standard]==0.30.1",
]
