[project]
name = "moderation-service"
version = "0.1.0"
description = "Moderation Service Backend on FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "celery[rabbitmq]>=5.6.2",
    "fastapi>=0.111.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.1.9",
    "pydantic-settings>=2.3.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.31",
    "uuid>=1.30",
    "uvicorn[standard]>=0.30.0",
]
