[project]
name = "sms-classification"
version = "0.1.0"
description = "SMS Classification with BERT model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "dvc>=3.64.1",
    "dvc-s3>=3.2.2",
    "fastapi[standard]>=0.121.2",
    "gensim>=4.4.0",
    "lightning>=2.5.6",
    "mlflow>=3.6.0",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.7.2",
    "stanza>=1.11.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "pre-commit>=4.4.0",
]
[tool.ruff]
line-length = 100
format = { docstring-code-format = true }

[tool.ruff.lint]
select = [
    "I",      # isort
    "E", "W", # pycodestyle
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

pycodestyle = { max-doc-length = 105 }
